# 42piscine_python_django

./: .gitignore  .gitmodules  README.MD
d00/ex00/: myawesomescript.sh
d00/ex01/: cv.html
d00/ex02/: form.html
d00/ex03/: copy.html
d00/ex04/: snippets.html
d00/ex05/: index.html
d01/ex00/: var.py
d01/ex01/: numbers.py
d01/ex02/: var_to_dict.py
d01/ex03/: capital_city.py
d01/ex04/: state.py
d01/ex05/: all_in.py
d01/ex06/: my_sort.py
d01/ex07/: periodic_table.py  periodic_table.txt
d02/ex00/: myCV.template  render.py  settings.py
d02/ex01/: intern.py
d02/ex02/: beverages.py
d02/ex03/: beverages.py  machine.py
d02/ex04/: elem.py
d02/ex05/: elements.py
d02/ex06/: Page.py  elem.py  elements.py
d03/ex00/: geohashing.py
d03/ex01/: my_program.py  my_script.sh
d03/ex02/: request_wikipedia.py  requirement.txt
d03/ex03/: requirement.txt  roads_to_philosophy.py
d03/ex04/: my_script.sh
d04/: .gitignore  manage.py  requirement.txt
d04/d04/: asgi.py  settings.py  urls.py
d04/ex00/: my_script.sh
d04/ex01/: urls.py  views.py
d05/: .gitignore  docker-compose.yml  init.sh  manage.py  requirement.txt
d06/: .gitignore  init.sh  manage.py  requirement.txt
d07/: manage.py  requirements.txt
d08/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.MD  gunicorn_conf.py  manage.py  nginx-app.conf  requirements.txt  setup.cfg  supervisor-app-staging.conf
d08/d08/: asgi.py  settings.py  urls.py  wsgi.py
d08/ex/: forms.py  models.py  urls.py  views.py
d08/ex/migrations/: 0001_initial.py
d08/ex/templates/: index.html
(+163 files in other folders)
